@@ -5,7 +5,7 @@ botocore==1.24.46
 certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.1.2
-clouday1-extract-aws-metadata==0.0.24
+clouday1-extract-aws-metadata==0.0.27
 colorama==0.4.4
 commonmark==0.9.1
 docutils==0.15.2
